--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,14 @@
 GameName=RollingBall
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/RollingBP/Maps/RollingBPExampleMap
+EditorStartupMap=/Game/Maps/Test.Test
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/RollingBP/Maps/RollingBPExampleMap
+GameDefaultMap=/Game/Maps/Test.Test
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/RollingBP/Blueprints/RollingGameMode.RollingGameMode_C
 GlobalDefaultServerGameMode=None
